objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>WT_Account_Classification__c</fullName>
        <formula>Text(Account.WT_Classification__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Account_Queue__c</fullName>
        <formula>TEXT(Account.WT_Account_Queue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Queue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Annual_Revenue_Ranked__c</fullName>
        <formula>Text(Account.WT_Annual_Revenue_Ranked__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Revenue (Ranked)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Last_Date_Of_Contact__c</fullName>
        <formula>Account.WT_Last_Date_Of_Contact__c</formula>
        <label>Last Date Of Contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_MSD_record_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MSD record ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Member_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+AccountId, Account.Name ,&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Owner_Name__c</fullName>
        <formula>Account.WT_Account_Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>